Revert ":arrow_up: Update to 1.21.1, use EXT2 file system & UI redesign"
This reverts commit b4da684ad5bc2443a488579f45780b5ba18cb30d.